<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OTech</string>

    <!-- general -->
    <string name="loading_error">Error loading data</string>
    <string name="empty_list_info">No items were found.\nSwipe to refresh the page.</string>
    <string name="enabled"> Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="link_copied">The link copied</string>
    <string name="notification_channel_name">News channel</string>
    <string name="notification_title">Time for reading?</string>
    <string name="notification_body">Stay in touch with latest tech news</string>

    <!-- screens -->
    <string name="all_posts_screen">Articles</string>
    <string name="news_screen">News</string>
    <string name="openings_screen">Openings</string>
    <string name="events_screen">Events</string>
    <string name="settings_screen">Settings</string>
    <string name="detailed_screen">Detailed</string>
    <string name="selected_screen">Selected</string>

    <!-- splash -->
    <string name="splash_title">A small warm-up</string>

    <!-- navigation items -->
    <string name="all_posts_item">@string/all_posts_screen</string>
    <string name="news_item">@string/news_screen</string>
    <string name="openings_item">@string/openings_screen</string>
    <string name="events_item">@string/events_screen</string>
    <string name="settings_item">@string/settings_screen</string>
    <string name="selected_item">@string/selected_screen</string>

    <!-- item/s -->
    <string name="item_date_unknown">unknown</string>
    <string name="item_date_format">dd MMM yyyy</string>
    <string name="item_date_language">en</string>
    <string name="item_date_country">GB</string>
    <string name="items_continue_reading">Continue reading…</string>

    <!-- openings -->
    <string name="filter_search_hint">Query:</string>
    <string name="filter_category">Category:</string>
    <string name="filter_location">Location:</string>
    <string name="filter_experience">Experience:</string>
    <string name="filter_clear">Clear</string>
    <string name="filter_apply">Apply</string>

    <string-array name="opening_category">
        <item>.Net</item>
        <item>1С</item>
        <item>Analyst</item>
        <item>Android</item>
        <item>BlockChain</item>
        <item>C++</item>
        <item>Data Science</item>
        <item>DBA</item>
        <item>DevOps</item>
        <item>Embedded</item>
        <item>ERP/CRM</item>
        <item>FrontEnd</item>
        <item>Golang</item>
        <item>HR</item>
        <item>iOS/macOS</item>
        <item>Java</item>
        <item>Node.js</item>
        <item>PHP</item>
        <item>Python</item>
        <item>QA</item>
        <item>Project Manager</item>
        <item>Product Manager</item>
        <item>ReactNative</item>
        <item>Ruby</item>
        <item>Sales</item>
        <item>Scala</item>
        <item>Security</item>
        <item>SEO</item>
        <item>Support</item>
        <item>Technical Writer</item>
        <item>Unity</item>
        <item>Other</item>
    </string-array>

    <string-array name="opening_location">
        <item>Kyiv</item>
        <item>Kharkiv</item>
        <item>Odesa</item>
        <item>Lviv</item>
        <item>Remote</item>
        <item>Relocation</item>
    </string-array>

    <string-array name="opening_experience">
        <item>Starter(0+)</item>
        <item>Experienced(1+)</item>
        <item>Veteran(3+)</item>
        <item>Avatar(5+)</item>
    </string-array>

    <!-- content description -->
    <string name="cnt_list_image">Image of a news provider</string>

    <!-- settings -->
    <string name="settings_history_title">History storage:</string>
    <string name="settings_history_subtitle">History storing period</string>
    <string name="setting_history_1">A few months</string>
    <string name="setting_history_2">Half a year</string>
    <string name="setting_history_3">Year</string>
    <string name="settings_provider_title">Providers:</string>
    <string name="settings_provider_subtitle">Available information providers</string>
    <string name="settings_version_title">Version:</string>
    <string name="settings_version_subtitle">None</string>
    <string name="settings_feedback_title">Feedback:</string>
    <string name="settings_feedback_subtitle">Send your feedback</string>
    <string name="settings_notification_title">Notifications:</string>
    <string name="settings_notification_subtitle">Inactivity time reminders: %1$s</string>
    <string name="settings_analytics_title">Analytics</string>
    <string name="settings_analytics_subtitle">Gathering statistics status</string>
    <string name="settings_joke_0">Yeah… you\'re an annoying guy</string>
    <string name="settings_joke_1">Stop touching the screen!</string>
    <string name="settings_joke_2" tools:ignore="Typos">Ok, listen</string>
    <string name="settings_joke_3">I like to read…</string>
    <string name="settings_joke_4">O. Henry</string>
    <string name="settings_joke_5">One day I will update these messages.</string>
    <string name="settings_feedback_subject">Feedback about TN (%1$s)</string>
    <string name="settings_feedback_body">Here you go!</string>

    <!-- providers -->
    <string name="provider_codeguida">Codeguida</string>
    <string name="provider_dou">DOU</string>
    <string name="provider_pingvin">Pingvin.pro</string>
    <string name="provider_tokar">Tokar</string>

    <!-- privacy policy -->
    <string name="privacy_policy_link"><a href="https://github.com/YaroslavHavrylovych/technical_news/wiki/privacy_policy#privacy-policy">Find more</a></string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_agree">Agree</string>
    <string name="privacy_policy_body">We inform you that by clicking on \"Agree\" you\'re accepting existing \"Privacy Policy\". If are you willing to get more information, please click on the link bellow. You can always disable all the statistics, from Settings.</string>

    <!-- notification -->
    <string name="notification_morning_notification">morning at %1$d</string>
    <string name="notification_lunch_notification">midday at %1$d</string>
    <string name="notification_evening_notification">evening at %1$d</string>
    <string name="notification_night_notification">night at %1$d</string>
    <string name="notification_none">no notifications</string>
</resources>
