<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/onBackground"
    android:orientation="vertical"
    android:paddingStart="@dimen/filter_sides_padding"
    android:paddingTop="@dimen/filter_padding"
    android:paddingEnd="@dimen/filter_sides_padding"
    android:paddingBottom="@dimen/filter_padding">

    <ViewStub
        android:id="@+id/center_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/filter_search_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_search_black"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minWidth="@dimen/filter_min_width"
            android:textColor="@color/onBackgroundText"
            android:textSize="@dimen/filter_search_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/category_spinner"
        style="@style/FilterSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/opening_category"
        android:textSize="@dimen/filter_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_text_layout" />


    <Spinner
        android:id="@+id/location_spinner"
        style="@style/FilterSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/opening_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_spinner" />


    <Spinner
        android:id="@+id/experience_spinner"
        style="@style/FilterSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/opening_experience"
        app:layout_constraintBottom_toTopOf="@id/apply_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_spinner" />

    <TextView
        android:id="@+id/clear_button"
        style="@style/FilterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:paddingStart="@dimen/filter_buttons_side_margin"
        android:paddingEnd="@dimen/filter_buttons_side_margin"
        android:text="@string/filter_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/apply_button"
        app:layout_constraintTop_toBottomOf="@id/experience_spinner" />

    <TextView
        android:id="@+id/apply_button"
        style="@style/FilterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:paddingStart="@dimen/filter_buttons_side_margin"
        android:paddingEnd="@dimen/filter_buttons_side_margin"
        android:text="@string/filter_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/experience_spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>